// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render view returned from ViewRegistry 1`] = `
<h1>
  Test
</h1>
`;

exports[`Render view returned from ViewRegistry with passed props 1`] = `
<h1>
  Test from props
</h1>
`;
